--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ rand = "0.9.2"
 reqwest = { version = "0.12.28", features = ["json"] }
 rust_decimal = { version = "1.39.0", features = ["serde"] }
 rust_decimal_macros = "1.39.0"
-sec = { version = "1.0.0", features = ["deserialize"] }
+secrecy = { version = "0.10", features = ["serde"] }
 serde = "1.0.228"
 serde_json = "1.0.148"
 serde_repr = "0.1.20"
