feat(rfq): add standalone RFQ API client (#76)
Add a new RFQ (Request for Quote) module that provides a standalone
client for interacting with the Polymarket RFQ API. The module is
completely independent from the CLOB client and can be enabled
separately via the `rfq` feature flag.

https://docs.polymarket.com/developers/market-makers/rfq/api-reference

Includes:
- Request endpoints: create, cancel, get requests
- Quote endpoints: create, cancel, get quotes
- Execution endpoints: accept quote, approve order
- Full L2 authentication support
- Integration tests for all endpoints

---------

Co-authored-by: sahilgat02 <sahil@polymarket.com>
Co-authored-by: G. Ramistella <60039721+gramistella@users.noreply.github.com>
Co-authored-by: chaz-polymarket <chaz@polymarket.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ default = []
 data = []
 gamma = []
 bridge = []
+rfq = []
 tracing = ["dep:tracing", "dep:serde_ignored"]
 ws = ["dep:backoff", "dep:bitflags", "dep:tokio", "dep:tokio-tungstenite"]
 rtds = ["dep:backoff", "dep:tokio", "dep:tokio-tungstenite"]
@@ -141,6 +142,16 @@ required-features = ["ws"]
 name = "websocket_user"
 path = "examples/clob/ws/user.rs"
 required-features = ["ws"]
+
+[[example]]
+name = "rfq_quotes"
+path = "examples/clob/rfq/quotes.rs"
+required-features = ["rfq"]
+
+[[example]]
+name = "rfq_requests"
+path = "examples/clob/rfq/requests.rs"
+required-features = ["rfq"]
 
 [[example]]
 name = "rtds_crypto_prices"
